# hash-id-crack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
