[package]
name = "hash-id-crack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8" # 进度条效果
clap = { version = "4.4.17", features = ["derive"] }
hex = "0.4.3"
num_cpus = "1.14.0"
digest = "0.10.7"
md5 = "0.7.0"
sm3 = "0.4.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"